--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "homepage": "https://github.com/LeonardoPuccio/schemanalyzer#readme",
   "dependencies": {
-    "axios": "^0.18.0",
     "fs": "0.0.1-security",
     "mongoose": "^5.4.0",
+    "node-fetch": "^2.3.0",
     "readline": "^1.3.0",
     "web-auto-extractor": "^1.0.17"
   }
