--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-node_modules
-old_method
-serp-scraper
-/test/
+/node_modules
+/old_method
+/serp-scraper
+/test
+/config/uriDBConnection.js
 test.js
