--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "schemanalyzer",
   "version": "0.1.0",
   "description": "Frequency analyzer of the schema.org classes",
-  "main": "app",
+  "main": "serpanalyzer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node clock"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,14 @@
   },
   "homepage": "https://github.com/LeonardoPuccio/schemanalyzer#readme",
   "dependencies": {
+    "cron": "^1.6.0",
     "fs": "0.0.1-security",
     "mongoose": "^5.4.0",
     "node-fetch": "^2.3.0",
     "readline": "^1.3.0",
     "web-auto-extractor": "^1.0.17"
+  },
+  "engines": {
+    "node": "9.6.1"
   }
 }
