--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /test
 /config/uriDBConnection.js
 /input_data/urlsToCheck.json
-/input_data/urlsToCheck-OK.json
+/input_data/urlsToCheck.json.BK
+/input_data/urlsToCheck-min.json
 .env
 test.js
