--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
   },
   "homepage": "https://github.com/LeonardoPuccio/schemanalyzer#readme",
   "dependencies": {
-    "axios": "^0.18.0",
+    "abortcontroller-polyfill": "^1.2.3",
     "cron": "^1.6.0",
     "fs": "0.0.1-security",
     "mongoose": "^5.4.0",
     "node-fetch": "^2.3.0",
-    "readline": "^1.3.0",
     "web-auto-extractor": "^1.0.17"
   },
   "engines": {
